# Sun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  base.db  fly.toml  schema.sql
bindings/frontend/src/bindings/: Trip.ts
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/pages/: dashboard.html  login.html  signup.html  trip.html
frontend/public/: cdmx.avif  europe.avif  japan.avif  monterrey.avif  world.avif
frontend/src/: App.css  App.tsx  MainDashboard.tsx  MainLogIn.tsx  MainSignUp.tsx  MainTrip.tsx  index.css  main.tsx  types.ts
frontend/src/bindings/: Item.ts  List.ts  Note.ts  Trip.ts
frontend/src/components/: Checklist.css  Checklist.tsx  ChecklistItem.css  ChecklistItem.tsx  ChecklistTab.css  ChecklistTab.tsx  Footer.css  Footer.tsx  LogIn.css  LogIn.tsx  NavBar.css  NavBar.tsx  SignUp.css  SignUp.tsx  utils.ts
frontend/src/components/dashboard/: Card.tsx  CardContainer.tsx
frontend/src/components/trip/: Trip.css  Trip.tsx
frontend/src/components/utils/: ToastContainer.tsx  ToastMessage.tsx
migrations/: 20240428010922_users.sql  20240428185410_users_index.sql  20240428194733_trip.sql
src/: checklist.rs  main.rs  signup.rs  trip.rs
